package com.lukire.map.tile.tiles;

import com.lukire.map.tile.Tile;
import com.lukire.map.tile.TileType;

public class DirtTile extends Tile {

    public DirtTile() {
        super(TileType.DIRT);
    }
}

