@startuml

title __TILES's Class Diagram__\n

  namespace com.lukire.map {
    namespace tile {
      namespace tiles {
        class com.lukire.map.tile.tiles.AirTile {
            + AirTile()
        }
      }
    }
  }
  

  namespace com.lukire.map {
    namespace tile {
      namespace tiles {
        class com.lukire.map.tile.tiles.DirtTile {
            + DirtTile()
        }
      }
    }
  }
  

  namespace com.lukire.map {
    namespace tile {
      namespace tiles {
        class com.lukire.map.tile.tiles.StoneTile {
            + StoneTile()
        }
      }
    }
  }
  

  com.lukire.map.tile.tiles.AirTile -up-|> com.lukire.map.tile.Tile
  com.lukire.map.tile.tiles.DirtTile -up-|> com.lukire.map.tile.Tile
  com.lukire.map.tile.tiles.StoneTile -up-|> com.lukire.map.tile.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
